--- a/musics.html
+++ b/musics.html
@@ -9,9 +9,12 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,700">
-    <link rel="stylesheet" href="assets/css/user.css">
     <link rel="stylesheet" href="assets/css/Header-Dark.css">
+    <link rel="stylesheet" href="assets/css/Hero-Music.css">
+    <link rel="stylesheet" href="assets/css/user.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
+    <link rel="stylesheet" href="assets/css/Music-Widget.css">
+    <link rel="stylesheet" href="assets/css/Music-Widget.css">
     <link rel="stylesheet" href="assets/css/Navigation-Menu.css">
     <link rel="stylesheet" href="assets/css/Projects-Clean.css">
     <link rel="stylesheet" href="assets/css/Projects-Horizontal.css">
@@ -21,56 +24,18 @@
 <body>
     <ul class="nav nav-pills categories">
         <li class="navbar-left"><a href="index.html">Home</a></li>
-        <li class="active navbar-left"><a href="#"><strong>Projs</strong></a></li>
+        <li class="navbar-left"><a href="#">Projs</a></li>
         <li class="navbar-left"><a href="soft_news.html" target="_blank">News</a></li>
-        <li class="navbar-left"><a href="#">Docs</a></li>
+        <li class="active navbar-left"><a href="#"><strong>Docs</strong></a></li>
         <li class="navbar-left"><a href="#">Python</a></li>
         <li class="navbar-left"><a href="#">Web</a></li>
         <li class="navbar-right"><a href="https://github.com/logout">Logout</a></li>
         <li class="navbar-right"><a href="https://github.com/login">Login</a></li>
     </ul>
-    <div class="team-grid"></div>
-    <div class="projects-clean">
-        <div class="container">
-            <div class="intro">
-                <h2 class="text-center">Projects </h2>
-                <p class="text-center">Nunc luctus in metus eget fringilla. Aliquam sed justo ligula. Vestibulum nibh erat, pellentesque ut laoreet vitae. </p>
-            </div>
-            <div class="row projects">
-                <div class="col-lg-4 col-sm-6 item"><img class="img-responsive" src="assets/img/desk.jpg">
-                    <h3 class="name">Web Projs</h3>
-                    <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, interdum justo suscipit id.</p>
-                </div>
-                <div class="col-lg-4 col-sm-6 item"><img class="img-responsive" src="assets/img/building.jpg">
-                    <h3 class="name">Soft News</h3>
-                    <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, interdum justo suscipit id.</p>
-                </div>
-                <div class="col-lg-4 col-sm-6 item"><img class="img-responsive" src="assets/img/loft.jpg">
-                    <h3 class="name">python</h3>
-                    <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, interdum justo suscipit id.</p>
-                </div>
-                <div class="col-lg-4 col-sm-6 item"><img class="img-responsive" src="assets/img/minibus.jpeg">
-                    <h3 class="name">Docker</h3>
-                    <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, interdum justo suscipit id.</p>
-                </div>
-                <div class="col-lg-4 col-sm-6 item"><img class="img-responsive" src="assets/img/minibus.jpeg">
-                    <h3 class="name">js</h3>
-                    <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, interdum justo suscipit id.</p>
-                </div>
-                <div class="col-lg-4 col-sm-6 item"><img class="img-responsive" src="assets/img/minibus.jpeg">
-                    <h3 class="name">ELK</h3>
-                    <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, interdum justo suscipit id.</p>
-                </div>
-                <div class="col-lg-4 col-sm-6 item"><img class="img-responsive" src="assets/img/minibus.jpeg">
-                    <h3 class="name">golang</h3>
-                    <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, interdum justo suscipit id.</p>
-                </div>
-                <div class="col-lg-4 col-sm-6 item"><img class="img-responsive" src="assets/img/minibus.jpeg">
-                    <h3 class="name">vue/angular</h3>
-                    <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, interdum justo suscipit id.</p>
-                </div>
-            </div>
-        </div>
+    <div class="jumbotron hero-music">
+        <h1 class="hero-title">Hero Music</h1>
+        <p class="hero-subtitle">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+        <p><a class="btn btn-primary btn-lg hero-button" role="button" href="#">Learn more</a></p>
     </div>
     <footer class="navbar-fixed-bottom">
         <h5>Tes Families Blog © 2018</h5>
@@ -79,6 +44,7 @@
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/bs-animation.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
+    <script src="assets/js/Music-Widget.js"></script>
 </body>
 
 </html>
